ingress/gateway-api/gateway/public-redirect.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-redirect-public
  namespace: gateways
spec:
  parentRefs:
  - kind: Gateway
    namespace: gateways
    name: main-public
    sectionName: http
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
